# ai-jupyter-paper-review

./: .gitignore  README.md  create_kernel.sh  package.json  pyproject.toml  start.sh  tsconfig.json
jupyter-config/: jupyter_paper_review.json
jupyter_paper_review/: __init__.py  claude_bridge.py  handlers.py  paper_fetcher.py  session_manager.py
src/: index.ts  panel.tsx
src/services/: api.ts
src/widgets/: ChatPanel.tsx  MarkdownRenderer.tsx  ModelSelector.tsx  NotebookList.tsx  PromptBank.tsx  SessionList.tsx
style/: index.css
